tests/ui/suggestions/suggest-assoc-fn-call-for-impl-trait.stderr
error[E0599]: no method named `foo` found for struct `A` in the current scope
  --> $DIR/suggest-assoc-fn-call-for-impl-trait.rs:21:8
   |
LL | struct A {
   | -------- method `foo` not found for this struct
...
LL |     _a.foo();
   |     ---^^^--
   |     |  |
   |     |  this is an associated function, not a method
   |     help: use associated function syntax instead: `A::foo(_a)`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in the trait `M`
  --> $DIR/suggest-assoc-fn-call-for-impl-trait.rs:8:5
   |
LL |     fn foo(_a: Self);
   |     ^^^^^^^^^^^^^^^^^

error[E0599]: no method named `baz` found for struct `A` in the current scope
  --> $DIR/suggest-assoc-fn-call-for-impl-trait.rs:23:8
   |
LL | struct A {
   | -------- method `baz` not found for this struct
...
LL |     _a.baz(0);
   |     ---^^^---
   |     |  |
   |     |  this is an associated function, not a method
   |     help: use associated function syntax instead: `A::baz(0)`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in the trait `M`
  --> $DIR/suggest-assoc-fn-call-for-impl-trait.rs:10:5
   |
LL |     fn baz(_a: i32);
   |     ^^^^^^^^^^^^^^^^

error[E0599]: no method named `bar` found for struct `A` in the current scope
  --> $DIR/suggest-assoc-fn-call-for-impl-trait.rs:27:8
   |
LL | struct A {
   | -------- method `bar` not found for this struct
...
LL |     _b.bar();
   |     ---^^^--
   |     |  |
   |     |  this is an associated function, not a method
   |     help: use associated function syntax instead: `A::bar(_b)`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in the trait `M`
  --> $DIR/suggest-assoc-fn-call-for-impl-trait.rs:9:5
   |
LL |     fn bar(_a: Self);
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0599`.
